Updates bursary fields, (potentially) fixes scrollbar on button problem.

--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -263,7 +263,6 @@ body {
 
 .section {
     width: 100%;
-    overflow: auto;
 }
 
 .side {
